feat: adicionando crud do printjob