@@ -31,7 +31,7 @@ public class PrinterService {
         Printer printer = new Printer();
         printer.setModelName(dto.modelName());
         printer.setTechnology(dto.technology());
-        printer.setStatus(PrinterStatus.AVAILABLE);
+        printer.setStatus(dto.status() != null ? dto.status() : PrinterStatus.AVAILABLE);
 
         Printer savedPrinter = printerRepository.save(printer);
         return mapToResponseDTO(savedPrinter);
@@ -39,24 +39,35 @@ public class PrinterService {
 
     @Transactional(readOnly = true)
     public List<PrinterResponseDTO> findAll() {
+        log.info("Buscando todas as impressoras cadastradas");
         return printerRepository.findAll().stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public Printer findById(UUID id) {
         return printerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Impressora não encontrada"));
+                .orElseThrow(() -> new RuntimeException("Impressora não encontrada: " + id));
+    }
+
+    @Transactional(readOnly = true)
+    public PrinterResponseDTO findByIdDetailed(UUID id) {
+        return mapToResponseDTO(findById(id));
     }
 
     @Transactional
     public PrinterResponseDTO update(UUID id, PrinterRequestDTO dto) {
-        log.info("Atualizando impressora ID: {}", id);
+        log.info("Atualizando Impressora ID: {} para o status: {}", id, dto.status());
 
         Printer printer = findById(id);
+
         printer.setModelName(dto.modelName());
         printer.setTechnology(dto.technology());
+
+        if (dto.status() != null) {
+            printer.setStatus(dto.status());
+        }
 
         Printer updatedPrinter = printerRepository.save(printer);
         return mapToResponseDTO(updatedPrinter);
